samples/_failures_safe/1761318962_130b19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a1491d9.c: In function ‘main’:
./samples/SAFE/__tmp_7a1491d9.c:142:32: error: unterminated argument list invoking macro "MATRIX_PRINT"
  142 |             MATRIX_PRINT(result
      |                                ^
./samples/SAFE/__tmp_7a1491d9.c:142:13: error: ‘MATRIX_PRINT’ undeclared (first use in this function)
  142 |             MATRIX_PRINT(result
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_7a1491d9.c:142:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7a1491d9.c:142:25: error: expected ‘;’ at end of input
  142 |             MATRIX_PRINT(result
      |                         ^
      |                         ;
./samples/SAFE/__tmp_7a1491d9.c:142:13: error: expected declaration or statement at end of input
  142 |             MATRIX_PRINT(result
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_7a1491d9.c:142:13: error: expected declaration or statement at end of input
